--- a/themes/dohmh/layouts/key-topics/cooling-info.html
+++ b/themes/dohmh/layouts/key-topics/cooling-info.html
@@ -56,8 +56,9 @@
             </div>
 
             <p>
-              <i class="fa-solid fa-mask-face"></i> More sensitive to air
-              pollution: <span id="sensitiveGroup" class="float-right"></span>
+              More sensitive to air pollution:
+              <span id="sensitiveGroup" class="float-right"></span>
+              <i class="fa-solid fa-mask-face"></i>
             </p>
             <hr class="my-1" />
             <p>
