add icons to left pane

--- a/themes/dohmh/layouts/key-topics/cooling-info.html
+++ b/themes/dohmh/layouts/key-topics/cooling-info.html
@@ -48,7 +48,7 @@
 
         <div class="" id="recsHolder">
           <span class="home-label font-weight-bold">About you:</span>
-          <div class="fs-md">
+          <div class="fs-md pt-1">
             <div class="hide">
               <p>Over 80F: <span id="over80F" class="float-right"></span></p>
               <p>AQI: <span id="aqiNum" class="float-right"></span></p>
@@ -56,24 +56,29 @@
             </div>
 
             <p>
-              More sensitive to air pollution:
+              <i class="fa-solid fa-mask-face mr-1 fs-lg" aria-hidden="true"></i>More sensitive to air pollution:
               <span id="sensitiveGroup" class="float-right"></span>
-              <i class="fa-solid fa-mask-face"></i>
+             
             </p>
-            <hr class="my-1" />
             <p>
+              <i class="fas fa-hand-holding-medical mr-1 fs-lg" aria-hidden="true"></i>
               Uses electrical medical equipment:
               <span id="usesEME" class="float-right"></span>
             </p>
             <p>
+              <i class="fas fa-hippo mr-1 fs-lg" aria-hidden="true"></i>
               Has an animal: <span id="hasAnimal" class="float-right"></span>
             </p>
-            <hr class="my-1" />
-            <p>Has AC: <span id="hasAC" class="float-right"></span></p>
             <p>
+              <i class="fas fa-temperature-low mr-1 fs-lg" aria-hidden="true"></i>
+              Has AC: <span id="hasAC" class="float-right"></span></p>
+            <p>
+              <i class="fas fa-money-bill-wave mr-1 fs-lg" aria-hidden="true"></i>
               Limits AC use: <span id="limitsAC" class="float-right"></span>
             </p>
-            <p>Has a fan: <span id="hasFan" class="float-right"></span></p>
+            <p>
+              <i class="fas fa-fan mr-1 fs-lg" aria-hidden="true"></i>
+              Has a fan: <span id="hasFan" class="float-right"></span></p>
           </div>
 
           <!-- Recommendations pane -->
