add icons, tweak test zone layout

--- a/themes/dohmh/layouts/key-topics/cooling-info.html
+++ b/themes/dohmh/layouts/key-topics/cooling-info.html
@@ -130,7 +130,7 @@
         </div>
 
         <button
-          class="btn btn-sm btn-outline-primary float-right"
+          class="btn btn-sm btn-outline-primary"
           onclick="setUpTest()"
         >
           See other recommendations?
@@ -145,41 +145,41 @@
 
         <button
           id="btn-sensitiveGroup"
-          class="btn btn-sm btn-outline-primary testbtn mr-1"
+          class="btn btn-sm btn-outline-primary testbtn mr-1 mb-1"
         >
           Sensitive group
         </button>
         <button
           id="btn-usesEME"
-          class="btn btn-sm btn-outline-primary testbtn mr-1"
+          class="btn btn-sm btn-outline-primary testbtn mr-1 mb-1"
         >
           Uses electrical medical equipment
         </button>
         <button
           id="btn-hasAnimal"
-          class="btn btn-sm btn-outline-primary testbtn mr-1"
+          class="btn btn-sm btn-outline-primary testbtn mr-1 mb-1"
         >
           Has an animal
         </button>
         <button
           id="btn-hasAC"
-          class="btn btn-sm btn-outline-primary testbtn mr-1"
+          class="btn btn-sm btn-outline-primary testbtn mr-1 mb-1"
         >
           Has AC at home
         </button>
         <button
           id="btn-limitsAC"
-          class="btn btn-sm btn-outline-primary testbtn mr-1"
+          class="btn btn-sm btn-outline-primary testbtn mr-1 mb-1"
         >
           Limits AC because of cost
         </button>
         <button
           id="btn-hasFan"
-          class="btn btn-sm btn-outline-primary testbtn mr-1"
+          class="btn btn-sm btn-outline-primary testbtn mr-1 mb-1"
         >
           Has a fan at home
         </button>
-        <br />
+
         <label for="temp">Current Temp:</label>
         <input
           type="number"
@@ -188,9 +188,9 @@
           min="60"
           max="110"
           value=""
-        /><br />
+        />
 
-        <label for="aqinum">AQI:</label>
+        <label for="aqinum" class="ml-2">AQI:</label>
         <input
           type="number"
           id="input-aqinum"
