--- a/themes/dohmh/layouts/key-topics/cooling-info.html
+++ b/themes/dohmh/layouts/key-topics/cooling-info.html
@@ -16,8 +16,18 @@
         </ul>
       </nav>
 
-      <h1>{{ .Title }}</h1>
-      <p>{{ .Content }}</p>
+      <div class="row">
+        <div class="col-md-8">
+          <h1>{{ .Title }}</h1>
+          <p>{{ .Content }}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row no-gutters">
+    <div class="col-12">
+      <img src="img/hero_6.svg" style="width:100%;">
     </div>
   </div>
 
