--- a/themes/dohmh/layouts/key-topics/cooling-info.html
+++ b/themes/dohmh/layouts/key-topics/cooling-info.html
@@ -17,9 +17,22 @@
       </nav>
 
       <div class="row">
-        <div class="col-md-8">
+        <div class="col-12 mb-2">
           <h1>{{ .Title }}</h1>
+        </div>
+
+        <div class="col-md-8">
           <p>{{ .Content }}</p>
+        </div>
+
+        <div class="col-md-4">
+          <div class="border fs-sm p-1 mt-2">
+            Learn more about heat, air quality, and how to <a href="https://www.nyc.gov/site/doh/health/emergency-preparedness/emergencies-extreme-weather-heat.page#:~:text=Signs%20of%20Heat%20Illness&text=Heat%20stroke%20occurs%20when%20the,Confusion%2C%20hallucinations%20and%20disorientation"> prevent weather-related illness</a>.
+              <ul>
+              <li> <a href="../../climatehealth/hvi/"> Learn more about heat and the built environment in your neighborhood. </a></li>
+              <li> <a href="../../airquality/realtime/"> Learn more about air quality in your neighborhood.</a> </li>
+              </ul>
+          </div>
         </div>
       </div>
     </div>
