small print change

--- a/themes/dohmh/layouts/nr-output/single.html
+++ b/themes/dohmh/layouts/nr-output/single.html
@@ -159,7 +159,7 @@
 
 
             <div class="row">
-                <div class="col-md-9 h-100">
+                <div class="col-md-9 h-100 col-print-12">
     
                 <!-- REPORT CONTENT -->
                 <div class="row">
@@ -204,7 +204,7 @@
                                         <!-- Only show on print -->
 
                                         <div class="row indicator-headings mb-2 print-only">
-                                            <div class="col-4 font-weight-bold">
+                                            <div class="col-4 font-weight-bold pl-3">
                                                 Topic
                                             </div>
                                             <div class="col-8">
@@ -275,7 +275,7 @@
                 </div>
     
                 <!-- NAV RIGHT SIDEBAR -->
-                <div class="col-md-3 h-100">
+                <div class="col-md-3 h-100 d-print-none">
                     <div class="border mb-2 nr-map-highlight" style="height: 100%">
                         <div class="p-1">
                             <p><strong style="color:#00923E">{{ $.Params.neighborhood }}</strong> includes ZIP Codes: 
