--- a/themes/dohmh/layouts/partials/nr-indicator.html
+++ b/themes/dohmh/layouts/partials/nr-indicator.html
@@ -217,6 +217,10 @@
 
             </div>
 
+            <div class="modal-body">
+                <span class="home-label font-weight-bold">Source: </span> {{ .data.data_source_list }}
+            </div>
+
             <!-- .modal-body -->
             <div class="flex-column p-2">
                 {{- if isset .data "source_description" -}}<p class="fs-sm mb-4"><em>Source: {{ htmlUnescape .data.source_description }}</em></p>{{- end -}}
