--- a/themes/dohmh/layouts/partials/nr-indicator.html
+++ b/themes/dohmh/layouts/partials/nr-indicator.html
@@ -218,7 +218,8 @@
             </div>
 
             <div class="modal-body">
-                <span class="home-label font-weight-bold">Source: </span> {{ .data.data_source_list }}
+                <span class="home-label font-weight-bold">Source: </span><br> 
+                <span class="fs-sm">{{ .data.data_source_list }}</span>
             </div>
 
             <!-- .modal-body -->
