--- a/themes/dohmh/layouts/partials/nr-indicator.html
+++ b/themes/dohmh/layouts/partials/nr-indicator.html
@@ -198,9 +198,13 @@
             <div class="modal-body" id="t-{{ urlize .data.indicator_short_name }}">
                 <span class="home-label font-weight-bold">Trends over time</span>
                 <p class="fs-sm"><em>{{ .data.measurement_type }} {{ .data.units }}</em></p>
-                <div style="width:100%; height:50vmin; z-index:10000;" id="trend-{{ .data.indicator_data_name }}-{{ .count }}"></div>
+                <div style="width:100%; height:50vmin; z-index:10000;display:block;" id="trend-{{ .data.indicator_data_name }}-{{ .count }}"></div>
+                
 
-            </div>
+                {{- if isset .data "nbr_data_note" -}}
+                <div class="data-note mt-3">Some years of data may have unstable rates or estimates suppressed due to low numbers.</div>
+                {{- end -}}
+                            </div>
             <!-- Alt Trend section for single-year indicators -->
             <div class="modal-body hide" id="ta-{{ urlize .data.indicator_short_name }}">
                 <span class="home-label font-weight-bold">Trends over time (not available)</span>
