--- a/themes/dohmh/layouts/partials/nr-indicator.html
+++ b/themes/dohmh/layouts/partials/nr-indicator.html
@@ -218,7 +218,9 @@
                 <span class="home-label font-weight-bold">By neighborhood</span>
                 <p class="fs-sm"><em>{{ .data.measurement_type }} {{ .data.units }}</em></p>
                 <div style="width:100%; height:60vmin; z-index:10000;" id="map-{{ .data.indicator_data_name }}-{{ .count }}"></div>
-
+                {{- if isset .data "nbr_data_note" -}}
+                <div class="data-note mt-3">Some neighborhoods may have estimates suppressed due to low numbers.</div>
+                {{- end -}}
             </div>
 
             <div class="modal-body">
