--- a/themes/dohmh/layouts/key-topics/section.html
+++ b/themes/dohmh/layouts/key-topics/section.html
@@ -16,7 +16,7 @@
 
         <div class="row">
             <div class="col-md-8 col-sm-12 my-4">
-                
+
                 <h1><i class="fas fa-star" aria-hidden="true" style="margin-right: 10px"></i>Key Topics in Environmental Health</h1>
                 <p>{{- .Content -}}</p>
             </div>
@@ -38,7 +38,7 @@
                         <h3 class="card-title"><a class="text-black" href="{{ .RelPermalink }}" class="text-primary">{{ .Title }}</a></h3>
                         <div class="mb-2">{{ .Content | truncate 150 }}</div>
                         <div class="d-flex justify-content-end link">
-                            <a class="fs-sm font-weight-bold" href="{{ .RelPermalink }}">Get data, info, and more &gt;</a>
+                            <a class="fs-sm font-weight-bold" href="{{ .RelPermalink }}">Get data, info, and more <i class="fa-solid fa-angle-right"></i></a>
                         </div>
                     </div>
                 </div>
